--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ ext {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
   implementation 'org.springframework.cloud:spring-cloud-function-context'
+  implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
 }
