--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '3.0.4'
+  id 'org.springframework.boot' version '2.7.3'
+  id 'org.springframework.boot' version '2.7.3'
   id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -13,7 +14,7 @@ repositories {
 }
 
 ext {
-  set('springCloudVersion', "2022.0.1")
+  set('springCloudVersion', "2021.0.3")
 }
 
 dependencies {
@@ -22,6 +23,14 @@ dependencies {
   implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
+  testImplementation("org.springframework.cloud:spring-cloud-stream") {
+    artifact {
+      name = "spring-cloud-stream"
+      extension = "jar"
+      type = "test-jar"
+      classifier = "test-binder"
+    }
+  }
 }
 
 dependencyManagement {
