--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-verison: 17
+          java-version: 17
           cache: gradle
       - name: Build, unit tests and integration tests
         run: |
