--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
   id 'java'
   id 'org.springframework.boot' version '2.7.3'
-  id 'org.springframework.boot' version '2.7.3'
   id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -19,6 +18,7 @@ ext {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.cloud:spring-cloud-starter-config'
   implementation 'org.springframework.cloud:spring-cloud-function-context'
   implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -38,6 +38,19 @@ dependencyManagement {
     mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
   }
 }
+bootBuildImage {
+  imageName = "${project.name}"
+  environment = ["BP_JVM_VERSION": "17.*"]
+
+  docker {
+    publishRegistry {
+      username = project.findProperty("registryUsername")
+      password = project.findProperty("registryToken")
+      url = project.findProperty("registryUrl")
+    }
+  }
+}
+
 
 tasks.named('test') {
   useJUnitPlatform()
