--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '2.7.3'
+  id 'org.springframework.boot' version '2.7.9'
   id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -14,6 +14,7 @@ repositories {
 
 ext {
   set('springCloudVersion', "2021.0.3")
+  set('snakeyaml.version', '1.33')
 }
 
 dependencies {
