--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,15 @@ spring:
     username: user
     password: password
     connection-timeout: 5s
+
+  management:
+    endpoints:
+      exposure:
+        include: health
+
+    endpoint:
+      health:
+        show-details: always
+        show-components: always
+        probes:
+          enabled: true
